Fixed campaign text overflow

--- a/app/assets/stylesheets/campaigns.scss
+++ b/app/assets/stylesheets/campaigns.scss
@@ -55,7 +55,7 @@
 
 .image_container {
 	width: 200px;
-	height: 200px;
+	height: 150px;
 	margin: 10px;
 }
 
